Fixing off center position of the loading spinner.

--- a/src-gwt/org/opencms/gwt/client/ui/css/general.css
+++ b/src-gwt/org/opencms/gwt/client/ui/css/general.css
@@ -254,7 +254,8 @@ div.simpleFormInputBox{
 	left: 50%;
 	top: 50%;  
 	text-align: center;
-	margin-top: -50px; 
+	margin-top: -50px;
+	margin-left: -32px; 
 	display: block;
 }
 
